k8s/local/specs/homelab-01-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: external-homelab-01-service
spec:
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 30070
  - name: https
    protocol: TCP
    port: 443
    targetPort: 30071
  selector: {}
---
apiVersion: v1
kind: Endpoints
metadata:
  name: external-homelab-01-service
subsets: 
  -
    addresses:
      -
        ip: "100.117.25.117"
      -
        ip: "100.96.223.125"
      -
        ip: "100.84.69.113"
    ports:
      -
        port: 30070
        name: "http"
      -
        port: 30071
        name: "https"
---
# Retry 4 times with exponential backoff
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: homelab-01-retry
spec:
  retry:
    attempts: 4
    initialInterval: 100ms
