k8s/local/specs/domain_routes.yaml
# Redirect to https
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: http-to-https
spec:
  redirectScheme:
    scheme: https
    permanent: true
---
# Redirect with domain replacement
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: ${hostname}-redirect
spec:
  redirectRegex:
    regex: ^https://(.*?)\.?${hostname}
    replacement: https://www.${hostname}
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: ${hostname}-tls-redirect-route
spec:
  entryPoints:
    - web
  routes:
    - match: HostRegexp(`${hostname}`,`{subdomain:^.*?}.${hostname}`)
      kind: Rule
      services:
      - name: noop@internal
        kind: TraefikService
      middlewares:
      - name: http-to-https
      priority: 10000
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: ${hostname}-www-redirect-route
spec:
  entryPoints:
    - websecure
  tls:
    secretName: tls-${hostname}-wildcard
  routes:
    - match: HostRegexp(`${hostname}`,`{subdomain:^.*?}.${hostname}`)
      kind: Rule
      services:
      - name: noop@internal
        kind: TraefikService
      middlewares:
      - name: ${hostname}-redirect
      priority: 1
