k8s/local/specs/homelab-01-forward.yaml
# Redirect to https
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: http-to-https
spec:
  redirectScheme:
    scheme: https
    permanent: true
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: homelab-01-${name}-route-redirect
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`${url}`)
      kind: Rule
      services:
      - name: noop@internal
        kind: TraefikService
      middlewares:
      - name: http-to-https
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: homelab-01-${name}-route
spec:
  entryPoints:
    - websecure
  tls:
    secretName: tls-homelab-01-${name}
  routes:
    - match: Host(`${url}`)
      kind: Rule
      services:
      - name: external-homelab-01-service
        passHostHeader: true
        port: 80
      middlewares:
        - name: homelab-01-retry
