k8s/local/specs/treasuryecm-route.yaml
apiVersion: v1
kind: Service
metadata:
  name: external-treasuryecm-service
  annotations:
    traefik.ingress.kubernetes.io/service.sticky.cookie: "true"
    traefik.ingress.kubernetes.io/service.sticky.cookie.name: cookie
    traefik.ingress.kubernetes.io/service.sticky.cookie.secure: "true"
spec:
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 80
  - name: https
    protocol: TCP
    port: 443
    targetPort: 443
  selector: {}
---
apiVersion: v1
kind: Endpoints
metadata:
  name: external-treasuryecm-service
subsets: 
  -
    addresses:
      -
        ip: "100.87.247.17"
    ports:
      -
        port: 80
        name: "http"
      -
        port: 443
        name: "https"
---
# Retry 4 times with exponential backoff
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: treasuryecm-retry
spec:
  retry:
    attempts: 4
    initialInterval: 100ms
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: treasuryecm-route
spec:
  entryPoints:
    - websecure
  tls: {}
  routes:
    - match: HostRegexp(`treasuryecm.rdaprojects.com`,`{subdomain:^.*?}.treasuryecm.rdaprojects.com`)
      kind: Rule
      services:
      - name: external-treasuryecm-service
        passHostHeader: true
        port: 80
      middlewares:
        - name: treasuryecm-retry
